Changelog
=========

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.6 (unreleased)
----------------
 - Fixed a small bug in decoding Django relations when declared as static.
   Thanks to wolver for the patch. (Ticket:693)
 - Removed ``exceptions`` from all ``Context`` and ``pyamf.util.Indexed*``
   classes (Ticket:660)
 - Empty Django relations are now encoded as ``None``, not ``pyamf.Undefined``
   (Ticket:659)
 - ``pyamf.ClientType`` removed, as it is not spec compliant (Ticket:651)

0.5.1 (2009-09-19)
------------------
 - pyamf.register_package can now accept a list of classes (Ticket:650)
 - Fixed a regression in TwistedGateway where services would be called twice
   (Ticket:648)
 - Fixed a bug with encoding anonymous trait references (Ticket:644)
 - Moved IndexedCollection into cpyamf (Ticket:424)
 - amf3.encode_int now encodes signed 29bit ints, not unsigned. Thanks to
   gerard for the report, investigation and patch! (Ticket:646)

0.5 (2009-09-07)
----------------
 - Added the ability to modify the timezones of dates being de/encoded for
   legacy systems. (Ticket:612)
 - Fixed a Django reference bug where parent.child.parent is parent would
   encode 3 objects and not 2. (Ticket:642)
 - Setting `None` on a Django DateField would blow up the encoder (Ticket:632)
 - `rootCause` in ErrorFault objects are now populated with the traceback
   object. (Ticket:637)
 - Support for encoding/decoding BlazeDS specific messages (Ticket:581)
 - Removed tracebacks from exception messages if debug=False (Ticket:552)
 - Support for google.appengine.ext.db.polymodel.PolyModel (Ticket:633)
 - Support for Django File/ImageField (Ticket:631)
 - Support for Django model inheritance (Ticket:626)
 - Rewrote attribute handling code. Added the ability to exclude, set
   read-only and static attributes. See http://pyamf.org/wiki/AttributeControl
   for more details. (Ticket:601)