@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.6 (unreleased)
 ----------------
+ - Fixed a reference bug with unsaved Django model instances. Thanks to wolver
+   for the patch and tests (Ticket:691).
  - Fixed a small bug in decoding Django relations when declared as static.
    Thanks to wolver for the patch. (Ticket:693)
  - Removed ``exceptions`` from all ``Context`` and ``pyamf.util.Indexed*``
